--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "^5.0.0",
-    "web-vitals": "^1.1.2",
-    "node-sass": "^7.0.1",
-    "react-router-dom": "^5.0.0",
-    "react-app-polyfill": "^1.0.0",
     "devextreme": "^21.2.3",
-    "devextreme-react": "^21.2.3"
+    "devextreme-react": "^21.2.3",
+    "node-sass": "^7.0.1",
+    "react": "^17.0.1",
+    "react-app-polyfill": "^1.0.0",
+    "react-camera-pro": "^1.1.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "^5.0.0",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
