--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "devextreme": "^21.2.3",
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^5.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -44,7 +45,7 @@
     ]
   },
   "devDependencies": {
-    "devextreme-cli": "^1.2.24",
+    "devextreme-cli": "^1.3.0",
     "devextreme-themebuilder": "^21.2.3"
   }
 }
